--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,10 @@ buildscript {
         retrofit_version = "2.9.0"
         ok_http_version = "4.9.0"
         lifecycle_version = "2.3.1"
-//        koin_version = "3.1.2"
         koin_version = "2.0.1"
+        junit_version = "4.12"
+        roboletric_version = "1.0.0"
+        mockito_version = "1.10.19"
     }
 
     repositories {
